--- a/WebRepo/public/index.html
+++ b/WebRepo/public/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header>
-    <div>My Website</div>
+    <div>TeleBot Cloud</div>
     <div class="tabs">
       <div class="tab" data-tab="feature1">Feature 1</div>
       <div class="tab" data-tab="feature2">Feature 2</div>
